# codebuddy

codebuddy/: pyproject.toml
codebuddy/codebuddy/: app.py
codebuddy/codebuddy/model/: dataclasses.py
codebuddy/codebuddy/services/: getrepo.py  order.py  promptcoster.py  promptsender.py  promptsplicer.py
codebuddy/codebuddy/static/css/: foundation.css  style.css
codebuddy/codebuddy/templates/: about.html  contact.html  index.html  layout.html  order_confirmation.html  order_review.html  search_result.html
